# PlayerX

./: .gitattributes  .gitignore  .gitmodules
app/: README.md  bump-version.js  icon.txt  index.html  latest.json  main.js  pack.js  package.json  preload.js  test.py
app/mac-inner/: VideoCompare
app/src/: index.html  main.js  preload.js
app/src/css/: style.css
app/src/js/: constants.js  index.js  ui.js  utils.js
player/: CMakeLists.txt  README.md  build.sh
player/src/: playerx.cpp
src-tauri/: package.json
src-tauri/src/: index.html  main.rs
